//===----------------------------------------------------------------------===//
//
// This source file is part of the Swift Distributed Actors open source project
//
// Copyright (c) 2018-2019 Apple Inc. and the Swift Distributed Actors project authors
// Licensed under Apache License v2.0
//
// See LICENSE.txt for license information
// See CONTRIBUTORS.md for the list of Swift Distributed Actors project authors
//
// SPDX-License-Identifier: Apache-2.0
//
//===----------------------------------------------------------------------===//

syntax = "proto3";

option optimize_for = SPEED;
option swift_prefix = "_Proto";

message SmallMessage {
    int64 number = 1;
    string name = 2;
}

message MediumMessage {
    message NestedMessage {
        string field1 = 1;
        int32 field2 = 2;
        int32 field3 = 3;
    }

    string field01 = 1;
    string field02 = 2;
    int32 field03 = 3;
    NestedMessage field04 = 4;
    bool field05 = 5;
    int32 field06 = 6;
    int64 field07 = 7;
    int64 field08 = 8;
    int64 field09 = 9;
    int64 field10 = 10;
    bool field11 = 11;
    string field12 = 12;
    bool field13 = 13;
    string field14 = 14;
    string field15 = 15;
    int64 field16 = 16;
    int64 field17 = 17;
}
